--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,79 @@
+
 .instructor-image {
-    width: 200px;
-    height: 200px;
+    max-width: 20%;
+    max-height: 100%;
     overflow: hidden;
     border-radius: 50%;
-    border: 5px solid #e91e63; /* Cor rosa para o contorno */
+    border: 5px solid #f86b9a; /* Cor rosa para o contorno */
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f0f0f0; /* Ajuste a cor de fundo conforme necessário */
+    background-color: #fc67a0; /* Ajuste a cor de fundo conforme necessário */
   }
-  
-  .instructor-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  @media (min-width: 640px) {
-    .flex-wrap {
-      flex-wrap: wrap;
+  @media (max-width: 768px) {
+    .instructor-image {
+      max-width: 50%;
     }
   }
+  @media (max-width: 640px) {
+    .instructor-image {
+      max-width: 50%;
+    }
+  }
+      .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+    .swiper-slide {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  .slide {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  .slide-item {
+    min-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .content {
+    max-width: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .image-container {
+    width: 40%;
+    padding-top: 40%; /* 1:1 Aspect Ratio */
+    position: relative;
+  }
+  .image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  @media (max-width: 768px) {
+    .image-container {
+      width: 60%;
+      padding-top: 60%; /* 1:1 Aspect Ratio */
+    }
+  }
+  @media (max-width: 640px) {
+    .image-container {
+      width: 80%;
+      padding-top: 80%; /* 1:1 Aspect Ratio */
+    }
+  }
+
+
+    
   /* styles.css */
 .primary {
     background-color: #e91e63;
@@ -77,7 +130,7 @@
     color: #000000;
 }
 .bg-black{
-    background-color: #000000;
+    background-color: #252525;
 }
 .modal {
     display: none;
