--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 .instructor-image {
     max-width: 20%;
     max-height: 100%;
@@ -129,7 +128,7 @@
     background-color: #63e91e;
     color: #000000;
 }
-.bg-black{
+.bg-back{
     background-color: #252525;
 }
 .modal {
