--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
   .instructor-image {
     max-width: 50%;
   }
-  .instructor-image2 {
+  .instructorimage-man {
     max-width: 50%;
   }
 }
@@ -32,7 +32,7 @@
   .instructor-image {
     max-width: 50%;
   }
-  .instructor-image2 {
+  .instructorimage-man {
     max-width: 50%;
   }
 }
