--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,28 @@
   max-height: 100%;
   overflow: hidden;
   border-radius: 50%;
-  border: 5px solid #f86b9a; /* Cor rosa para o contorno */
+  border: 5px solid #707070; /* Cor rosa para o contorno */
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fc67a0; /* Ajuste a cor de fundo conforme necessário */
+  background-color: #707070; /* Ajuste a cor de fundo conforme necessário */
 }
-.instructor-image-man {
+.instructor-image2 {
   max-width: 20%;
   max-height: 100%;
   overflow: hidden;
   border-radius: 50%;
-  border: 5px solid #4a90e2; /* Cor rosa para o contorno */
+  border: 5px solid #707070; /* Cor rosa para o contorno */
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #4a90e2; /* Ajuste a cor de fundo conforme necessário */
+  background-color: #707070; /* Ajuste a cor de fundo conforme necessário */
 }
 @media (max-width: 768px) {
   .instructor-image {
     max-width: 50%;
   }
-  .instructor-image-man {
+  .instructor-image2 {
     max-width: 50%;
   }
 }
@@ -32,7 +32,7 @@
   .instructor-image {
     max-width: 50%;
   }
-  .instructor-image-man {
+  .instructor-image2 {
     max-width: 50%;
   }
 }
