--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   justify-content: center;
   background-color: #707070; /* Ajuste a cor de fundo conforme necessário */
 }
-.instructor-image2 {
+.instructor-image-man{
   max-width: 20%;
   max-height: 100%;
   overflow: hidden;
